upgrade to jdk 16